# utility

./: CMakeLists.txt
include/echo/: adl.h  index.h  option.h  utility.h
include/echo/utility/: ascii_table.h  functional.h  initializer_multilist.h  iterator_range.h  map_apply.h  option.h  range.h  repeat_type.h  stable_sum.h  static_const.h  tuple_concept.h
unittest/: ascii_table_test.cpp  functional_test.cpp  index_test.cpp  initializer_multilist_test.cpp  map_apply_test.cpp  option_test.cpp  repeat_type_test.cpp  stable_sum_test.cpp  static_const_test.cpp  tuple_concept_test.cpp
